# tuido

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  TODO.md  main.py  pyproject.toml
.agents/skills/dev-task/: SKILL.md
tests/: test_feishu.py  test_parser.py
tudo/: __init__.py  cli.py  models.py  parser.py  ui.py
tuido/: __init__.py  __main__.py  cli.py  cmd_add.py  cmd_create.py  cmd_global_view.py  cmd_list.py  cmd_pick.py  cmd_pull.py  cmd_push.py  cmd_tui.py  config.py  envs.py  feishu.py  global_view.py  main.py  models.py  parser.py  ui.py  ui_global_view.py  ui_local.py  util.py
