[project]
name = "tuido"
version = "0.1.0"
description = "A TUI Kanban board for TODO.md files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "textual>=0.52.0",
    "rich>=13.0.0",
]

[project.scripts]
tuido = "tuido.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tuido"]

[tool.black]
line-length = 150
target-version = ['py312']
