[project]
name = "tuido"
version = "0.1.0"
description = "A TUI Kanban board for TODO.md files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3,<0.8.0",
    "textual>=0.52.0",
    "rich>=13.0.0",
    "requests>=2.32.5,<3.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
tuido = "tuido.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tuido"]

[tool.black]
line-length = 150
target-version = ['py312']
